--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body{
   height: 100%;
 }
 #sredina{
-
   width: 100%;
   height: 100%;
   position: absolute;
@@ -33,6 +32,7 @@ body{
   margin-top: 190px;
   margin-right: 70px;
   border-radius: 30px;
+  font-size: 40px;
 }
 .gumbi{
   display: flex;
@@ -75,6 +75,7 @@ body{
   width: 4000px;
   height: 800px;
   background-color: rgb(71, 36, 3);
+  filter: blur(10px);
   background-repeat: no-repeat;
   background-size: contain;
   position: relative;
