--- a/styles.css
+++ b/styles.css
@@ -6,31 +6,49 @@ height: 100%;
 }  
 body{
   text-align: center;
-  background-image: url(slike/background.jpg);
+  background-image: url(slike/pult.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
+a{
+  font-size: 3em;
+  margin-top: 10px;
+  font-family: 'Coffee Shop', sans-serif;
+}
+.ho{
+  position: relative;
+  margin:auto auto 0 auto;
+  width: fit-content;
+}
+#canvas{
+  display: block;
+  position: absolute;
+  margin-top: 68px;
+  margin-left: 128px;
+}
+#canvas2 {
+  position: relative;
+  margin-top: 68px;
+  margin-left: 128px;
+  top: 0;
+}
+
 #glavni{
   width: 100%;
-  height: 100%;
+  height: 80%;
 }
 #sredina{
   width: 100%;
-  height: 100%;
+  height: 80%;
   position: absolute;
   top: 0;
   left: 0;
 }
-.canv{
-  position: relative;
-  margin-top: 68px;
-  margin-left: 140px;
-}
 .play{
   width: 150px;
   height: 70px;
-  margin-top: 190px;
-  margin-right: 70px;
+  margin-top: 243px;
+  margin-right: 10px;
   border-radius: 30px;
   font-size: 40px;
 }
@@ -50,7 +68,7 @@ body{
 
 .glass{
   text-align: center;
-  margin-top: -150px;
+  margin-top: -130px;
   width: 110px;
   height: 140px;
   background-color: rgb(255, 255, 255);
@@ -60,7 +78,7 @@ body{
 }
 
 .water-ctr{
-  margin-top: -150px;
+  margin-top: -130px;
   top: -10;
   width: 100px;
   height: 130px;
@@ -74,9 +92,8 @@ body{
 .water{
   width: 4000px;
   height: 800px;
-  background-color: rgb(71, 36, 3);
-  filter: blur(10px);
-  background-repeat: no-repeat;
+  background-color: rgb(71, 39, 9);
+  background-repeat: repeat;
   background-size: contain;
   position: relative;
   z-index: 1;
